# djpoe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check.yml  linters-and-tests.yml  linters.yml
djpoe/: manage.py
djpoe/djpoe/: .env.local  asgi.py  settings.py  urls.py  wsgi.py
djpoe/helloworld/: views.py
djpoe/helloworld/templates/helloworld/: index.html
djpoe/home/: models.py
djpoe/home/fixtures/: homepage.json
djpoe/home/migrations/: 0001_initial.py
djpoe/home/templates/home/: home_page.html
djpoe/templates/allauth/layouts/: base.html
scripts/: customize.py  install.sh  logger.py
tests/: conftest.py  test_accounts_pages.py  test_admin_page.py  test_auth_models_user.py  test_dummy.py  test_helloworld.py  test_home.py
